# mipaquete

./: __init__.py  math.py  prueba_mipaquete.py  pyproject.toml
.github/workflows/: github-actions.yml
mipaquete/: string.py
src/: saludar.py
tests/: test_math.py  test_math_multiplicar.py  test_math_restar.py  test_math_sumar.py  test_string_mayuscula.py  test_string_minuscula.py
