[tool.poetry]
name = "src"
version = "0.2.0"
description = ""
authors = ["Tanausú <tanausu.jorge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
pytest = "^7.2.0"

[tool.poetry.scripts]
hola = "src.saludar:hola"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"